Added tests for the currency converter. 230626_1421